@@ -40,6 +40,8 @@ public class NameTagManager {
     private final Set<UUID> blocked;
     private final Set<UUID> sneaking;
     private final Set<UUID> hideNametags;
+    private final Map<UUID, Settings.NameTag> nameTagOverrides;
+    private final Map<UUID, Boolean> shiftSystemBlocked;
     private final List<MyScheduledTask> tasks;
     @Setter
     private boolean debug = false;
@@ -54,13 +56,15 @@ public class NameTagManager {
         this.sneaking = Sets.newConcurrentHashSet();
         this.blocked = Sets.newConcurrentHashSet();
         this.hideNametags = Sets.newConcurrentHashSet();
+        this.nameTagOverrides = Maps.newConcurrentMap();
+        this.shiftSystemBlocked = Maps.newConcurrentMap();
         this.loadAll();
         this.scaleAttribute = loadScaleAttribute();
     }
 
     private void loadAll() {
         plugin.getTaskScheduler().runTaskLaterAsynchronously(() -> {
-            Bukkit.getOnlinePlayers().forEach(p -> addPlayer(p, true));
+            plugin.getPlayerListener().getOnlinePlayers().values().forEach(p -> addPlayer(p, true));
             this.startTask();
         }, 5);
     }
@@ -72,61 +76,51 @@ public class NameTagManager {
                     if (plugin.isPaper() && plugin.getServer().isStopping()) {
                         return;
                     }
-                    Bukkit.getOnlinePlayers().forEach(p -> refresh(p, false));
+                    nameTags.values().forEach(tag -> refresh(tag.getOwner(), false));
                 },
                 10, plugin.getConfigManager().getSettings().getTaskInterval());
 
         // Refresh passengers
-        final MyScheduledTask passengers = plugin.getTaskScheduler().runTaskTimerAsynchronously(() ->
-                        Bukkit.getOnlinePlayers()
-                                .stream()
-                                .filter(p -> plugin.getHook(HMCCosmeticsHook.class).map(h -> !h.hasBackpack(p)).orElse(true))
-                                .forEach(player ->
-                                        getPacketDisplayText(player)
-                                                .ifPresent(PacketNameTag::sendPassengerPacketToViewers))
-                , 20, 20 * 5L);
+        final MyScheduledTask passengers = plugin.getTaskScheduler().runTaskTimerAsynchronously(() -> nameTags.values()
+                .stream()
+                .map(PacketNameTag::getOwner)
+                .filter(p -> plugin.getHook(HMCCosmeticsHook.class).map(h -> !h.hasBackpack(p)).orElse(true))
+                .forEach(player -> getPacketDisplayText(player)
+                        .ifPresent(PacketNameTag::sendPassengerPacketToViewers)),
+                20, 20 * 5L);
 
         // Scale task
         if (isScalePresent()) {
-            final MyScheduledTask scale = plugin.getTaskScheduler().runTaskTimerAsynchronously(() ->
-                            Bukkit.getOnlinePlayers().forEach(player ->
-                                    getPacketDisplayText(player)
-                                            .filter(PacketNameTag::checkScale)
-                                            .ifPresent(PacketNameTag::refresh))
-                    , 20, 10);
+            final MyScheduledTask scale = plugin.getTaskScheduler()
+                    .runTaskTimerAsynchronously(() -> nameTags.values().forEach(tag -> {
+                        if (tag.checkScale()) {
+                            tag.refresh();
+                        }
+                    }), 20, 10);
             tasks.add(scale);
         }
 
         if (plugin.getConfigManager().getSettings().isShowWhileLooking()) {
-            final MyScheduledTask point = plugin.getTaskScheduler().runTaskTimerAsynchronously(() ->
-                            Bukkit.getOnlinePlayers().forEach(player1 -> {
-                                final Optional<PacketNameTag> display = getPacketDisplayText(player1);
-                                if (display.isEmpty()) {
-                                    return;
-                                }
-                                Bukkit.getOnlinePlayers().forEach(player2 -> {
-                                    if (plugin.getHook(ViaVersionHook.class).map(h -> h.hasNotTextDisplays(player2)).orElse(false)) {
-                                        return;
-                                    }
+            final MyScheduledTask point = plugin.getTaskScheduler().runTaskTimerAsynchronously(() -> {
+                nameTags.values().forEach(tag -> {
+                    final Player targetOwner = tag.getOwner();
+                    final List<Player> viewers = plugin.getTrackerManager().getWhoTracks(targetOwner);
 
-                                    if (player1.getWorld() != player2.getWorld()) {
-                                        return;
-                                    }
+                    for (Player viewer : viewers) {
+                        if (plugin.getHook(ViaVersionHook.class).map(h -> h.hasNotTextDisplays(viewer)).orElse(false)) {
+                            continue;
+                        }
 
-                                    if (player1.equals(player2)) {
-                                        return;
-                                    }
+                        final boolean isPointing = isPlayerPointingAt(viewer, targetOwner);
 
-                                    final boolean isPointing = isPlayerPointingAt(player2, player1);
-                                    if (display.get().canPlayerSee(player2) && !isPointing) {
-                                        display.get().hideFromPlayer(player2);
-                                    } else if (!display.get().canPlayerSee(player2) && isPointing) {
-                                        display.get().showToPlayer(player2);
-                                    }
-                                });
-                            })
-
-                    , 5, 5);
+                        if (tag.canPlayerSee(viewer) && !isPointing) {
+                            tag.hideFromPlayer(viewer);
+                        } else if (!tag.canPlayerSee(viewer) && isPointing) {
+                            tag.showToPlayer(viewer);
+                        }
+                    }
+                });
+            }, 5, 5);
             tasks.add(point);
         }
 
@@ -184,7 +178,6 @@ public class NameTagManager {
         return (int) attribute.getValue();
     }
 
-
     public void blockPlayer(@NotNull Player player) {
         blocked.add(player.getUniqueId());
         if (debug) {
@@ -203,6 +196,28 @@ public class NameTagManager {
         blocked.remove(uuid);
         creating.remove(uuid);
         hideNametags.remove(uuid);
+        nameTagOverrides.remove(uuid);
+        shiftSystemBlocked.remove(uuid);
+    }
+
+    public boolean hasNametagOverride(@NotNull Player player) {
+        return nameTagOverrides.containsKey(player.getUniqueId());
+    }
+
+    @NotNull
+    public Optional<Settings.NameTag> getNametagOverride(@NotNull Player player) {
+        return Optional.ofNullable(nameTagOverrides.get(player.getUniqueId()));
+    }
+
+    @NotNull
+    public Settings.NameTag getEffectiveNametag(@NotNull Player player) {
+        return nameTagOverrides.getOrDefault(player.getUniqueId(),
+                plugin.getConfigManager().getSettings().getNametag(player));
+    }
+
+    @NotNull
+    public Settings.NameTag getConfigNametag(@NotNull Player player) {
+        return plugin.getConfigManager().getSettings().getNametag(player);
     }
 
     private boolean preAddChecks(@NotNull Player player, boolean canBlock) {
@@ -268,7 +283,7 @@ public class NameTagManager {
 
         creating.add(player.getUniqueId());
 
-        final Settings.NameTag nametag = plugin.getConfigManager().getSettings().getNametag(player);
+        final Settings.NameTag nametag = getEffectiveNametag(player);
         final PacketNameTag display = new PacketNameTag(plugin, player, nametag);
         display.text(player, Component.empty());
         display.spawn(player);
@@ -288,14 +303,15 @@ public class NameTagManager {
         plugin.getPlaceholderManager().applyPlaceholders(player, nametag.linesGroups(), List.of(player))
                 .thenAccept(lines -> loadDisplay(player, lines.get(player), nametag, display))
                 .exceptionally(throwable -> {
-                    plugin.getLogger().log(java.util.logging.Level.SEVERE, "Failed to create nametag for " + player.getName(), throwable);
+                    plugin.getLogger().log(java.util.logging.Level.SEVERE,
+                            "Failed to create nametag for " + player.getName(), throwable);
                     creating.remove(player.getUniqueId());
                     return null;
                 });
     }
 
     public void refresh(@NotNull Player player, boolean force) {
-        final Settings.NameTag nametag = plugin.getConfigManager().getSettings().getNametag(player);
+        final Settings.NameTag nametag = getEffectiveNametag(player);
 
         if (PacketEvents.getAPI().getPlayerManager().getUser(player) == null) {
             return;
@@ -333,13 +349,14 @@ public class NameTagManager {
         plugin.getPlaceholderManager().applyPlaceholders(player, nametag.linesGroups(), relationalPlayers)
                 .thenAccept(lines -> editDisplay(player, lines, nametag, force))
                 .exceptionally(throwable -> {
-                    plugin.getLogger().log(java.util.logging.Level.SEVERE, "Failed to edit nametag for " + player.getName(), throwable);
+                    plugin.getLogger().log(java.util.logging.Level.SEVERE,
+                            "Failed to edit nametag for " + player.getName(), throwable);
                     return null;
                 });
     }
 
     private void editDisplay(@NotNull Player player, Map<Player, Component> components,
-                             @NotNull Settings.NameTag nameTag, boolean force) {
+            @NotNull Settings.NameTag nameTag, boolean force) {
         getPacketDisplayText(player).ifPresent(packetNameTag -> {
             if (!packetNameTag.getNameTag().equals(nameTag)) {
                 packetNameTag.setNameTag(nameTag);
@@ -353,7 +370,7 @@ public class NameTagManager {
             final int backgroundColor = nameTag.background().getColor().asARGB();
 
             components.forEach((p, c) -> {
-                final boolean[] updateRef = {packetNameTag.text(p, c) || force};
+                final boolean[] updateRef = { packetNameTag.text(p, c) || force };
                 final User user = PacketEvents.getAPI().getPlayerManager().getUser(p);
                 if (user == null) {
                     return;
@@ -375,7 +392,6 @@ public class NameTagManager {
                         }
                     }
 
-
                 });
 
                 if (updateRef[0]) {
@@ -386,11 +402,11 @@ public class NameTagManager {
     }
 
     private void loadDisplay(@NotNull Player player, @NotNull Component component,
-                             @NotNull Settings.NameTag nameTag,
-                             @NotNull PacketNameTag display) {
+            @NotNull Settings.NameTag nameTag,
+            @NotNull PacketNameTag display) {
         try {
             final Location location = player.getLocation().clone();
-            //add 1.80 to make a perfect tp animation
+            // add 1.80 to make a perfect tp animation
             location.setY(location.getY() + 1.80);
 
             creating.remove(player.getUniqueId());
@@ -399,10 +415,9 @@ public class NameTagManager {
             display.setBillboard(plugin.getConfigManager().getSettings().getDefaultBillboard());
             display.setShadowed(nameTag.background().shadowed());
             display.setSeeThrough(nameTag.background().seeThrough());
-            //background color, if disabled, set to transparent
+            // background color, if disabled, set to transparent
             display.setBackgroundColor(nameTag.background().getColor());
 
-//            display.setTransformation(new Vector3f(0, plugin.getConfigManager().getSettings().getYOffset(), 0));
             display.resetOffset(plugin.getConfigManager().getSettings().getYOffset());
 
             display.setViewRange(plugin.getConfigManager().getSettings().getViewDistance());
@@ -414,15 +429,17 @@ public class NameTagManager {
             handleVanish(player, display);
 
         } catch (Throwable e) {
-            plugin.getLogger().log(java.util.logging.Level.SEVERE, "Failed to create nametag for " + player.getName(), e);
+            plugin.getLogger().log(java.util.logging.Level.SEVERE, "Failed to create nametag for " + player.getName(),
+                    e);
         }
     }
 
     private void handleVanish(@NotNull Player player, @NotNull PacketNameTag display) {
         final boolean isVanished = plugin.getVanishManager().isVanished(player);
 
-        //if player is vanished, hide display for all players except for who can see the player
-        Bukkit.getOnlinePlayers().stream()
+        // if player is vanished, hide display for all players except for who can see
+        // the player
+        plugin.getPlayerListener().getOnlinePlayers().values().stream()
                 .filter(p -> p != player)
                 .filter(p -> p.getLocation().getWorld() == player.getLocation().getWorld())
                 .filter(p -> !isVanished || plugin.getVanishManager().canSee(p, player))
@@ -431,14 +448,12 @@ public class NameTagManager {
                 .forEach(display::showToPlayer);
     }
 
-
     public void removePlayer(@NotNull Player player) {
         final PacketNameTag packetNameTag = nameTags.remove(player.getUniqueId());
         if (packetNameTag != null) {
             packetNameTag.remove();
             entityIdToDisplay.remove(packetNameTag.getEntityId());
         }
-
 
         nameTags.forEach((uuid, display) -> {
             display.handleQuit(player);
@@ -455,19 +470,22 @@ public class NameTagManager {
     }
 
     public void showToTrackedPlayers(@NotNull Player player) {
-        showToTrackedPlayers(player, plugin.getTrackerManager().getTrackedPlayers(player.getUniqueId()));
+        showToTrackedPlayers(player, plugin.getTrackerManager().getWhoTracks(player));
     }
 
-    public void showToTrackedPlayers(@NotNull Player player, @NotNull Collection<UUID> tracked) {
+    public void showToTrackedPlayers(@NotNull Player player, @NotNull Collection<Player> tracked) {
         final PacketNameTag packetNameTag = nameTags.get(player.getUniqueId());
         if (packetNameTag != null) {
             packetNameTag.setVisible(true);
             final Set<Player> players = tracked.stream()
-                    .map(Bukkit::getPlayer)
                     .filter(Objects::nonNull)
                     .collect(Collectors.toSet());
             players.add(packetNameTag.getOwner());
             packetNameTag.showToPlayers(players);
+            if (debug) {
+                plugin.getLogger().info("Showing nametag of " + player.getName() + " to tracked players: " +
+                        players.stream().map(Player::getName).collect(Collectors.joining(", ")));
+            }
             return;
         }
 
@@ -489,9 +507,10 @@ public class NameTagManager {
         nameTags.clear();
     }
 
-    public void updateSneaking(@NotNull Player player, boolean isSneaking) {
-        if (isSneaking) sneaking.add(player.getUniqueId());
-        else sneaking.remove(player.getUniqueId());
+    public void updateSneaking(@NotNull Player player, boolean sneaking) {
+        if (shiftSystemBlocked.getOrDefault(player.getUniqueId(), false)) {
+            return;
+        }
 
         getPacketDisplayText(player).ifPresent(packetNameTag -> {
             if (packetNameTag.getNameTag().background().seeThrough()) {
@@ -499,7 +518,8 @@ public class NameTagManager {
             }
 
             packetNameTag.setSneaking(sneaking);
-            packetNameTag.setTextOpacity((byte) (sneaking ? plugin.getConfigManager().getSettings().getSneakOpacity() : -1));
+            packetNameTag
+                    .setTextOpacity((byte) (sneaking ? plugin.getConfigManager().getSettings().getSneakOpacity() : -1));
             packetNameTag.refresh();
         });
     }
@@ -507,23 +527,27 @@ public class NameTagManager {
     public void reload() {
         final float yOffset = plugin.getConfigManager().getSettings().getYOffset();
         final float viewDistance = plugin.getConfigManager().getSettings().getViewDistance();
-        final AbstractDisplayMeta.BillboardConstraints billboard = plugin.getConfigManager().getSettings().getDefaultBillboard();
+        final AbstractDisplayMeta.BillboardConstraints billboard = plugin.getConfigManager().getSettings()
+                .getDefaultBillboard();
 
-        plugin.getTaskScheduler().runTaskAsynchronously(() -> Bukkit.getOnlinePlayers().forEach(p -> {
-            setYOffset(p, yOffset);
-            setViewDistance(p, viewDistance);
-            setBillBoard(p, billboard);
-            refresh(p, true);
-        }));
+        plugin.getTaskScheduler()
+                .runTaskAsynchronously(() -> plugin.getPlayerListener().getOnlinePlayers().values().forEach(p -> {
+                    setYOffset(p, yOffset);
+                    setViewDistance(p, viewDistance);
+                    setBillBoard(p, billboard);
+                    refresh(p, true);
+                }));
         startTask();
     }
 
     @SuppressWarnings("UnstableApiUsage")
     public void debug(@NotNull CommandSender audience) {
-        audience.sendRichMessage("<red>UnlimitedNameTags v" + plugin.getPluginMeta().getVersion() + " . Compiled: " + plugin.getConfigManager().isCompiled());
-        final AtomicReference<Component> component = new AtomicReference<>(Component.text("Nametags:").colorIfAbsent(TextColor.color(0xFF0000)));
+        audience.sendRichMessage("<red>UnlimitedNameTags v" + plugin.getPluginMeta().getVersion() + " . Compiled: "
+                + plugin.getConfigManager().isCompiled());
+        final AtomicReference<Component> component = new AtomicReference<>(
+                Component.text("Nametags:").colorIfAbsent(TextColor.color(0xFF0000)));
         nameTags.forEach((uuid, display) -> {
-            final Player player = Bukkit.getPlayer(uuid);
+            final Player player = plugin.getPlayerListener().getPlayer(uuid);
 
             if (player == null) {
                 return;
@@ -533,7 +557,12 @@ public class NameTagManager {
                     .map(Bukkit::getPlayer)
                     .filter(Objects::nonNull)
                     .map(Player::getName)
-                    .toList();
+                    .collect(Collectors.toList());
+
+            if (!plugin.getConfigManager().getSettings().isShowCurrentNameTag()) {
+                viewers.remove(player.getName());
+            }
+
             final long lastUpdate = display.getLastUpdate();
 
             final Component text = getComponent(display, viewers, player, lastUpdate);
@@ -545,7 +574,7 @@ public class NameTagManager {
 
     @NotNull
     private Component getComponent(@NotNull PacketNameTag display, @NotNull List<String> viewers,
-                                   @NotNull Player player, long lastUpdate) {
+            @NotNull Player player, long lastUpdate) {
         final int seconds = (int) ((System.currentTimeMillis() - lastUpdate) / 1000);
         final Map<String, String> properties = display.properties();
         Component hover = Component.text("Viewers: " + viewers).appendNewline()
@@ -577,13 +606,12 @@ public class NameTagManager {
         getPacketDisplayText(player).ifPresent(packetNameTag -> packetNameTag.setViewRange(viewDistance));
     }
 
-
     public void vanishPlayer(@NotNull Player player) {
         getPacketDisplayText(player).ifPresent(packetNameTag -> {
             final Set<UUID> viewers = new HashSet<>(packetNameTag.getViewers());
             final boolean isVanished = plugin.getVanishManager().isVanished(player);
             viewers.forEach(uuid -> {
-                final Player viewer = Bukkit.getPlayer(uuid);
+                final Player viewer = plugin.getPlayerListener().getPlayer(uuid);
                 if (viewer == null || viewer == player) {
                     return;
                 }
@@ -599,7 +627,7 @@ public class NameTagManager {
         getPacketDisplayText(player).ifPresent(packetNameTag -> {
             final Set<UUID> viewers = new HashSet<>(packetNameTag.getViewers());
             viewers.forEach(uuid -> {
-                final Player viewer = Bukkit.getPlayer(uuid);
+                final Player viewer = plugin.getPlayerListener().getPlayer(uuid);
                 if (viewer == null || viewer == player) {
                     return;
                 }
@@ -607,7 +635,6 @@ public class NameTagManager {
             });
         });
     }
-
 
     @NotNull
     public Optional<PacketNameTag> getPacketDisplayText(@NotNull Player player) {
@@ -697,15 +724,89 @@ public class NameTagManager {
     public void showOtherNametags(@NotNull Player player) {
         hideNametags.remove(player.getUniqueId());
         plugin.getTrackerManager().getTrackedPlayers(player.getUniqueId()).forEach(uuid -> {
-            final Player tracked = Bukkit.getPlayer(uuid);
+            final Player tracked = plugin.getPlayerListener().getPlayer(uuid);
             if (tracked == null) {
                 return;
             }
+
             getPacketDisplayText(tracked).ifPresent(display -> display.showToPlayer(player));
         });
     }
 
     public boolean isHiddenOtherNametags(@NotNull Player player) {
         return hideNametags.contains(player.getUniqueId());
+    }
+
+    public void swapNametag(@NotNull Player player, @NotNull Settings.NameTag nameTag) {
+        final PacketNameTag display = nameTags.get(player.getUniqueId());
+        if (display == null) {
+            return;
+        }
+
+        display.setNameTag(nameTag);
+
+        final List<Player> relationalPlayers = display.getViewers().stream()
+                .map(Bukkit::getPlayer)
+                .filter(Objects::nonNull)
+                .toList();
+
+        plugin.getPlaceholderManager().applyPlaceholders(player, nameTag.linesGroups(), relationalPlayers)
+                .thenAccept(lines -> {
+                    final Component component = lines.get(player);
+                    display.text(player, component);
+                    display.setBillboard(plugin.getConfigManager().getSettings().getDefaultBillboard());
+                    display.setShadowed(nameTag.background().shadowed());
+                    display.setSeeThrough(nameTag.background().seeThrough());
+                    display.setBackgroundColor(nameTag.background().getColor());
+                    display.resetOffset(plugin.getConfigManager().getSettings().getYOffset());
+                    display.setViewRange(plugin.getConfigManager().getSettings().getViewDistance());
+
+                    plugin.getTaskScheduler().runTaskLater(() -> display.modifyOwner(meta -> meta.setText(component)),
+                            1);
+
+                    lines.forEach((p, c) -> {
+                        if (!p.equals(player)) {
+                            display.text(p, c);
+                        }
+                    });
+
+                    display.refresh();
+                })
+                .exceptionally(throwable -> {
+                    plugin.getLogger().log(java.util.logging.Level.SEVERE,
+                            "Failed to swap nametag for " + player.getName(), throwable);
+                    return null;
+                });
+    }
+
+    public void setNametagOverride(@NotNull Player player, @NotNull Settings.NameTag nameTag) {
+        nameTagOverrides.put(player.getUniqueId(), nameTag);
+
+        final PacketNameTag display = nameTags.get(player.getUniqueId());
+        if (display != null) {
+            swapNametag(player, nameTag);
+        }
+    }
+
+    public void removeNametagOverride(@NotNull Player player) {
+        nameTagOverrides.remove(player.getUniqueId());
+
+        final PacketNameTag display = nameTags.get(player.getUniqueId());
+        if (display != null) {
+            final Settings.NameTag configNametag = getConfigNametag(player);
+            swapNametag(player, configNametag);
+        }
+    }
+
+    public void setShiftSystemBlocked(@NotNull Player player, boolean blocked) {
+        if (blocked) {
+            shiftSystemBlocked.put(player.getUniqueId(), true);
+        } else {
+            shiftSystemBlocked.remove(player.getUniqueId());
+        }
+    }
+
+    public boolean isShiftSystemBlocked(@NotNull Player player) {
+        return shiftSystemBlocked.getOrDefault(player.getUniqueId(), false);
     }
 }
